may/code/nadieh/css/style.css
/* ... */
html {
    --mouse-header-x: 0;
    --mouse-constellations-x: 0;
    font-size: 16px;
}

body {
    font-family: var(--body-font);
    /* font-family: 'Muli', sans-serif; */
    padding: 0;
    margin: 0;
    width: calc(100vw - (100vw - 100%)); /* body width minus scrollbar*/
    min-width: var(--body-max-width);
    font-size: 16px;
}

p {
    line-height: 1.8;
    font-size: 16px;
    margin: 1.75em 0 1em 0;
}
p.no-top {
    margin-top: 0;
}

a, a:link, a:visited, a:active {
    color: inherit;
    border-bottom: 0.08em solid #D80833;
    text-decoration: none;
}

/* @media screen and (max-width: 700px) {
    body {
        width: 100vw;
    }
} */

/* ---------- SECTION | TEXT CULTURE ---------- */

.section-text,
.section-mini-chart {
    position: relative;
    width: calc(var(--body-max-width) - 2 * 20px);
    margin: 10px auto 20px auto;
    padding: 10px 20px;

    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-column-gap: 1em;
}

.section-text p,
#cultures-explanation,
.chart-container-mini {
    grid-column: 4 / -1;
}

.section-text .sidenote {
    grid-column: 1 / span 3;
    align-self: center;
    font-size: 0.7em;
    font-style: italic;
    line-height: 1.5;
    color: #585858;
}

.section-text h2 {
    font-family: var(--title-font);
    font-size: 2.8em;
    font-weight: 400;
    margin-top: 1.4em;
    margin-bottom: 0.2em;
    grid-column: 1 / -1;
}

.section-text .chart-explanation-text {
    font-size: 0.85em;
    color: #585858;
    margin: 1em auto 0em auto;
}

.red {
    color: #D80833;
}
.aquamarine {
    color: #17AA69;
}
.grey {
    color: #9c9c9c;
}

.egyptian {
    color: #DF1428;   
}
.macedonian {
    color: #932278;
}
.navajo {
    color: #644AA0;   
}
.tupi {
    color: #55B558;   
}

/* @media screen and (max-width: 700px) {
    .section-text,
    .section-mini-chart {    
        display: block;
    }

    .section-text .sidenote {
        display: none;
    }
} */

/* ---------- SECTION | HEADER ---------- */

#section-header {
    text-align: center;
    margin-bottom: 10px;
    width: 100%;
    height: 500px;
    text-align: center;
    overflow-x: hidden;
}

#header-group {
    position: relative;
    height: 100%;
    display: grid;
    grid-template-columns: 1fr;
}

#chart-header {
    grid-column: 1 / -1;
    grid-row: 1;
    justify-self: center;
    align-self: center;
    z-index: -1;
    /* height: 500px; */
}

#chart-header .background {
    /* overflow: hidden; */
    position: absolute;
    top: 0;
    /* left: -25%; */
    /* height: 100%; */
    /* width: 150%;  */
    /* transform: translateX(calc(var(--mouse-header-x) * 1px)); */
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #001540;
    background-image: url("../img/full-sky-map/full-sky-header-2x-min.png");
    background-position-x: calc(var(--mouse-header-x) * 1px);
    background-position-y: top;
    background-repeat: repeat-x;
    background-size: auto 100%;
}

#chart-header canvas {
    overflow: hidden;
    position: absolute;
    top: 0;
    left: -25%;
    transform: translateX(calc(var(--mouse-header-x) * 1px));
}

#title-header-group {
    grid-column: 1 / -1;
    grid-row: 1;
    justify-self: center;
    align-self: center;
    z-index: 2;
    pointer-events: none;
    color: white;
}

#title-header-group h1 {
    font-family: var(--title-font);
    font-size: 7em;
    margin-bottom: 0;
    margin-top: 0;
    letter-spacing: 0.03em;
    font-weight: 400;
    text-shadow: 0px 0px 5px #000;
}

#title-header-group h3 {
    font-size: 1.35em;
    margin-bottom: 0;
    margin-top: 0.4em;
    letter-spacing: 0.04em;
    font-weight: 300;
    text-shadow: 1px 0px 2px #000, 0px 1px 2px #000, -1px 0px 2px #000, 0px -1px 2px #000;
}

/* ---------- SECTION | ORION ---------- */

#section-chart-orion {
    height: 960px;
    padding: 0 20px;
    margin-top: 30px;
    margin-bottom: 30px;
}

#betelgeuse-note {
    display: none;
}

#chart-orion {
    display: grid;
    grid-template-columns: 1fr;
}

#chart-orion canvas, #chart-orion svg {
    grid-column: 1;
    grid-row: 1;
    justify-self: center;
    align-self: center;
}

/* ---------- GENERAL | CIRCULAR CHART LAYOUT ---------- */

.section-circular-chart {
    max-width: var(--body-max-width);
    margin-left: auto;
    margin-right: auto;
}

.chart-container-circular {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.chart-circular {
    position: relative;
    text-align: center;
}

.chart-circular canvas {
    pointer-events: none;
}

.chart-circular svg {
    overflow: visible;
}

.chart-circular-mini-map-circle {
    fill: none;
    stroke: currentColor;
    stroke-width: 1.5;
    cursor: pointer;
    pointer-events: all;
}
.chart-circular-mini-map-name-path {
    fill: none;
    pointer-events: none;
}

.chart-circular-mini-map-culture {
    font-family: var(--title-font);
    font-size: 14px;
    text-anchor: middle;
    fill: currentColor;
    pointer-events: none;
}
.chart-circular-mini-map-name {
    font-size: 9px;
    text-anchor: middle;
    fill: currentColor;
    letter-spacing: 0.03em;
    text-transform: lowercase;
    font-style: italic;
    pointer-events: none;
}

.chart-circular-title {
    font-size: 14px;
}

.chart-circular-star-title {
    font-family: var(--title-font);
    font-size: 46px;
    text-transform: inherit;
    letter-spacing: unset;
}

.chart-circular-hide-group {
    text-anchor: middle;
}
.chart-circular-hide-group text {
    pointer-events: none;
    fill: #001540;
}
.chart-circular-text {
    font-size: 14px;
}
.chart-circular-text-culture {
    font-size: 19px;
    font-weight: 300;
    font-style: italic;
}
.chart-circular-text-name {
    font-family: var(--title-font);
    font-size: 42px;
}

/* ---------- SECTION | SIRIUS & BIG DIPPER CHART ---------- */

#section-chart-sirius,
#section-chart-big-dipper  {
    margin-bottom: 10px;
    padding: 0;
    height: 510px;
}
/* ... */

